[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://WriterComponent/DocumentBlocks/image.gd" id="1_57308"]
[ext_resource type="Texture2D" path="res://icon.svg" id="2_olkg5"]

[node name="Image" type="HBoxContainer" node_paths=PackedStringArray("edit", "image_rect")]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 4
script = ExtResource("1_57308")
block_type = "IMAGE"
edit = NodePath("Edit")
image_rect = NodePath("ImageRect")

[node name="Edit" type="VSlider" parent="."]
visible = false
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
mouse_default_cursor_shape = 9
min_value = 100.0
max_value = 600.0
step = 50.0
value = 250.0

[node name="ImageRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
texture = ExtResource("2_olkg5")
expand_mode = 3
stretch_mode = 4

[connection signal="focus_entered" from="Edit" to="." method="_on_edit_focus_entered"]
[connection signal="focus_exited" from="Edit" to="." method="_on_edit_focus_exited"]
[connection signal="value_changed" from="Edit" to="." method="_on_edit_value_changed"]
[connection signal="focus_entered" from="ImageRect" to="." method="focus_on_edit"]
